--- a/Stylesheet/about.css
+++ b/Stylesheet/about.css
@@ -1,9 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Heebo:wght@100..900&display=swap');
+@import url("global.css");
 *{
-
-}
-body {
     font-family: "Heebo", sans-serif;
+}
+
+body {
     margin: 0;
     padding: 0;
     background-color: #f9f9f9;
