--- a/Stylesheet/styles.css
+++ b/Stylesheet/styles.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Heebo:wght@100..900&display=swap');
+@import url("global.css");
 *{
     font-family: "Heebo", sans-serif;
 
