--- a/Stylesheet/contact.css
+++ b/Stylesheet/contact.css
@@ -181,26 +181,99 @@ button[type="submit"]:hover {
         gap: 20px;
         padding: 10px;
         width: 90%;
-        margin: 0 5%;
+        margin: 10px 5%;
         background-color: transparent;
         color: black;
+        position: relative;
+    }
+    .contact-info::after{
+        content: "";
+        background-color: #3D3A3A;
+        width:90%;
+        height: 1px;
+        position: absolute;
+        bottom: -5px;
+        left: 50%;
+        transform: translate(-50%,-20%);
+    }
+    .phone-contact .contact-info:last-child::after{
+        width: 0;
     }
     .phone-contact{
-        padding: 10px;
-        background-color: #ebd7d7;
+        padding: 15px;
+        background-color: #1D1D1D;
         max-width: 90%;
         margin: 10px 5%;
-        border-radius: 15px;
+        border-radius: 16px;
     }
+
     .phone-contact-text p{
         margin: 1px;
+        color: white;
     }
     .phone-contact-text p:first-child{
         color: #A6A6A6;
     }
     .contact-icon{
         background-color:#000000 ;
-        padding: 8px 12px;
+        padding: 10px 14px;
         border-radius: 4px;
     }
+    .social-links{
+        display: flex;
+        justify-content: center;
+        gap: 10px;
+        align-self: center;
+    }
+    .social-icon{
+        background-color: #1D1D1D;
+        padding: 20px 6px;
+        border-radius: 8px;
+    }
+    body,footer{
+        background-color: #000000;
+    }
+    header{
+        background-color: #000000;
+        
+    }
+    header a,footer i,footer p{
+        color: white !important;
+    }
+    .phone-title{
+        color: white;
+        text-align: center;
+    }
+    .button-36 {
+        padding: 0 2.6rem;
+      }
 }
+/* CSS */
+.button-36 {
+    background-image: linear-gradient(92.88deg, #455EB5 9.16%, #5643CC 43.89%, #673FD7 64.72%);
+    border-radius: 8px;
+    border-style: none;
+    box-sizing: border-box;
+    color: #FFFFFF;
+    cursor: pointer;
+    flex-shrink: 0;
+    font-family: "Inter UI","SF Pro Display",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Open Sans","Helvetica Neue",sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+    height: 4rem;
+    padding: 0 1.6rem;
+    text-align: center;
+    text-shadow: rgba(0, 0, 0, 0.25) 0 3px 8px;
+    transition: all .5s;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    margin: 10px 32.5%;
+    width: 150px;
+  }
+  
+  .button-36:hover {
+    box-shadow: rgba(80, 63, 205, 0.5) 0 1px 30px;
+    transition-duration: .1s;
+  }
+  
