--- a/Stylesheet/contact.css
+++ b/Stylesheet/contact.css
@@ -167,6 +167,15 @@ button[type="submit"] {
 button[type="submit"]:hover {
     background-color: #333;
 }
+.phone-contact{
+    display: none;
+}
+.social-links{
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    align-self: center;
+}
 @media screen and (max-width: 768px) {
     .contact-container{
         display: none;
@@ -205,6 +214,7 @@ button[type="submit"]:hover {
         max-width: 90%;
         margin: 10px 5%;
         border-radius: 16px;
+        display: block;
     }
 
     .phone-contact-text p{
@@ -219,12 +229,7 @@ button[type="submit"]:hover {
         padding: 10px 14px;
         border-radius: 4px;
     }
-    .social-links{
-        display: flex;
-        justify-content: center;
-        gap: 10px;
-        align-self: center;
-    }
+
     .social-icon{
         background-color: #1D1D1D;
         padding: 20px 6px;
@@ -246,10 +251,12 @@ button[type="submit"]:hover {
     }
     .button-36 {
         padding: 0 2.6rem;
+        display: block !important;
       }
 }
 /* CSS */
 .button-36 {
+    display: none;
     background-image: linear-gradient(92.88deg, #455EB5 9.16%, #5643CC 43.89%, #673FD7 64.72%);
     border-radius: 8px;
     border-style: none;
